fix overflow

--- a/assets/stylesheets/thanks.css
+++ b/assets/stylesheets/thanks.css
@@ -31,3 +31,7 @@
   float:left;
   width: 80%;
 }
+
+#content{
+  overflow: visible;
+}
